kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enterprise-devops
  labels:
    name: enterprise-devops
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
